--- a/WeatherApp/WeatherApp/Views/TableViewCell/WeatherTableViewCell.xib
+++ b/WeatherApp/WeatherApp/Views/TableViewCell/WeatherTableViewCell.xib
@@ -9,70 +9,96 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherCell" rowHeight="378" id="f6K-Td-EyB" customClass="WeatherTableViewCell" customModule="WeatherApp">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="378"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherCell" rowHeight="327" id="f6K-Td-EyB" customClass="WeatherTableViewCell" customModule="WeatherApp">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="327"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="f6K-Td-EyB" id="OPH-58-eZk">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="378"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="327"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U6j-Op-nHT" customClass="CustomAppView" customModule="WeatherApp">
-                        <rect key="frame" x="20" y="132" width="374" height="223"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U6j-Op-nHT" customClass="CustomAppView" customModule="WeatherApp">
+                        <rect key="frame" x="20" y="132" width="374" height="172"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="25" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgo-VO-uyl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="25" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgo-VO-uyl">
                                 <rect key="frame" x="26" y="8" width="322" height="64"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="NgV-bH-zMC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="43"/>
                                 <color key="textColor" red="0.48627450980392156" green="0.68959583833533411" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pressure: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-fH-dbf">
-                                <rect key="frame" x="26" y="112" width="340" height="26"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Pressure: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8z-fH-dbf">
+                                <rect key="frame" x="26" y="101" width="340" height="14"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1b-d3-7n2">
-                                <rect key="frame" x="26" y="182" width="340" height="26"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Humidity: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Oq-Ax-fWK">
+                                <rect key="frame" x="26" y="125" width="340" height="14"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Humidity: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Oq-Ax-fWK">
-                                <rect key="frame" x="26" y="148" width="340" height="26"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Date:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msC-2d-cKg">
+                                <rect key="frame" x="26" y="80" width="340" height="15"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msC-2d-cKg">
-                                <rect key="frame" x="26" y="80" width="340" height="26"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1b-d3-7n2">
+                                <rect key="frame" x="26" y="148" width="340" height="14"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.95409169819999995" green="0.95409169819999995" blue="0.95409169819999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="S8z-fH-dbf" firstAttribute="leading" secondItem="U6j-Op-nHT" secondAttribute="leading" constant="26" id="22b-Ne-3qE"/>
+                            <constraint firstItem="msC-2d-cKg" firstAttribute="leading" secondItem="U6j-Op-nHT" secondAttribute="leading" constant="26" id="6Ah-FM-GKh"/>
+                            <constraint firstItem="msC-2d-cKg" firstAttribute="top" secondItem="cgo-VO-uyl" secondAttribute="bottom" constant="8" symbolic="YES" id="73T-Xz-4l5"/>
+                            <constraint firstAttribute="trailing" secondItem="cgo-VO-uyl" secondAttribute="trailing" constant="26" id="7q3-88-vBJ"/>
+                            <constraint firstAttribute="trailing" secondItem="msC-2d-cKg" secondAttribute="trailing" constant="8" id="DSR-om-lNv"/>
+                            <constraint firstAttribute="bottom" secondItem="M1b-d3-7n2" secondAttribute="bottom" constant="10" id="EhM-qv-N0A"/>
+                            <constraint firstItem="cgo-VO-uyl" firstAttribute="leading" secondItem="U6j-Op-nHT" secondAttribute="leading" constant="26" id="LCv-lK-6rP"/>
+                            <constraint firstItem="9Oq-Ax-fWK" firstAttribute="top" secondItem="S8z-fH-dbf" secondAttribute="bottom" constant="10" id="LN9-ho-Aht"/>
+                            <constraint firstItem="9Oq-Ax-fWK" firstAttribute="leading" secondItem="U6j-Op-nHT" secondAttribute="leading" constant="26" id="MQ4-fB-BKI"/>
+                            <constraint firstItem="cgo-VO-uyl" firstAttribute="top" secondItem="U6j-Op-nHT" secondAttribute="top" constant="8" id="PE1-9B-PXj"/>
+                            <constraint firstAttribute="trailing" secondItem="S8z-fH-dbf" secondAttribute="trailing" constant="8" id="Vqv-eS-mq6"/>
+                            <constraint firstItem="M1b-d3-7n2" firstAttribute="top" secondItem="9Oq-Ax-fWK" secondAttribute="bottom" constant="8" symbolic="YES" id="k3d-tj-9ng"/>
+                            <constraint firstAttribute="trailing" secondItem="9Oq-Ax-fWK" secondAttribute="trailing" constant="8" id="nHx-9Y-cSd"/>
+                            <constraint firstItem="S8z-fH-dbf" firstAttribute="top" secondItem="msC-2d-cKg" secondAttribute="bottom" constant="6" id="rO6-yk-JVN"/>
+                            <constraint firstAttribute="trailing" secondItem="M1b-d3-7n2" secondAttribute="trailing" constant="8" id="smj-R3-hUY"/>
+                            <constraint firstItem="M1b-d3-7n2" firstAttribute="leading" secondItem="U6j-Op-nHT" secondAttribute="leading" constant="26" id="wyb-q5-5C9"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusView">
                                 <real key="value" value="10"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MIN-y6-VT6">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MIN-y6-VT6">
                         <rect key="frame" x="87" y="16" width="240" height="95"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="95" id="053-i1-y1V"/>
+                        </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3QD-10-7mp">
-                        <rect key="frame" x="0.0" y="374" width="414" height="1"/>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D4m-Mr-XGu">
+                        <rect key="frame" x="0.0" y="325" width="414" height="1"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                     </view>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="MIN-y6-VT6" secondAttribute="trailing" constant="87" id="EPE-pX-jkx"/>
+                    <constraint firstItem="U6j-Op-nHT" firstAttribute="leading" secondItem="OPH-58-eZk" secondAttribute="leadingMargin" id="FHj-Wo-nXP"/>
+                    <constraint firstItem="U6j-Op-nHT" firstAttribute="trailing" secondItem="OPH-58-eZk" secondAttribute="trailingMargin" id="am5-VM-v8J"/>
+                    <constraint firstItem="U6j-Op-nHT" firstAttribute="top" secondItem="MIN-y6-VT6" secondAttribute="bottom" constant="21" id="bli-io-lfl"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="U6j-Op-nHT" secondAttribute="bottom" constant="12" id="k5c-Do-RHL"/>
+                    <constraint firstItem="MIN-y6-VT6" firstAttribute="leading" secondItem="OPH-58-eZk" secondAttribute="leading" constant="87" id="tk2-gE-B7M"/>
+                    <constraint firstItem="MIN-y6-VT6" firstAttribute="top" secondItem="OPH-58-eZk" secondAttribute="top" constant="16" id="xTJ-4W-HJb"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateLabel" destination="msC-2d-cKg" id="kmk-dv-gsn"/>
@@ -82,7 +108,7 @@
                 <outlet property="tempuratureLabel" destination="cgo-VO-uyl" id="2d4-ho-Zre"/>
                 <outlet property="weatherImageView" destination="MIN-y6-VT6" id="0YF-aH-mIF"/>
             </connections>
-            <point key="canvasLocation" x="44.927536231884062" y="-301.33928571428572"/>
+            <point key="canvasLocation" x="44.927536231884062" y="-318.41517857142856"/>
         </tableViewCell>
     </objects>
     <resources>
